== 1.3.3 released 2008-10-03

* Fixed modifiers being double escaped on equals condition

== 1.3.2 released 2008-10-03

* Fixed condition to type cast all values in an array
* Fixed bug to properly set the type for the type cast column
* Fixed bug to allow conditions on local columns
* Apparently ActiveRecord 2.2 doesnt remove duplicates on all joins, need to enforce this for ALL versions of ActiveRecord
* Fixed bug when passing a symbol as the SQL type for condition return types
* Moved duplicate removal to only apply when searching or calculating from a search object. Anything done in a normal ActiveRecord method should remain untouched and let ActiveRecord handle it. Just like in ActiveRecord if you do a User.all search and pass some :joins, you might get duplicate records. Searchgasm should not change that behavior, unless called from a searchgasm object.
* Discard meaningless array values when setting a condition.
* Delete blank strings from mass assignments on conditions.

== 1.3.1 released 2008-10-02

* Fixed bug when requiring a connection adapter that is not present
* Fixes bug in "not" conditions

== 1.3.0 released 2008-10-02

* Added modifiers into the mix: hour_of_created_at_less_than = 10, etc.
* Changed how the Searchgasm::Conditions::Base class works. Instead of predefining all methods for all conditions upon instantiation, they are defined as needed via method_missing. Similar to
  ActiveRecord's dynamic finders: User.find_by_name_and_email(name, email). Once the are defined they never hit method_missing again, acts like a cache.
* Altered how values are handled for each condition, meaningless values are ignored completely.
* Added in more "not" conditions: not_like, not_begin_with, not_have_keywords, etc

== 1.2.2 released 2008-09-29

* Fixed bug when reverse engineering order to order_by, assumed ASC and DESC would always be present when they are not.