@@ -67,7 +67,7 @@ module Searchgasm
 
     MAJOR = 1
     MINOR = 3
-    TINY  = 2
+    TINY  = 3
 
     # The current version as a Version instance
     CURRENT = new(MAJOR, MINOR, TINY)
